<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/Titel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBeschleunigung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textStyle="bold"
        android:text="@string/beschleuningung_in_m_s2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitel" />

    <LinearLayout
        android:id="@+id/LLBesch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBeschleunigung">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x" />

        <TextView
            android:id="@+id/tvBeschX"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:hint="@string/zeros"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y" />

        <TextView
            android:id="@+id/tvBeschY"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:hint="@string/zeros"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/z" />

        <TextView
            android:id="@+id/tvBeschZ"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:hint="@string/zeros"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mag" />

        <TextView
            android:id="@+id/tvBeschMag"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:hint="@string/zeros"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvGyroskop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:text="@string/gyroskop_in_rad_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLBesch" />

    <LinearLayout
        android:id="@+id/LLGyro"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGyroskop">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x" />

        <TextView
            android:id="@+id/tvGyroX"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/zeros"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y" />

        <TextView
            android:id="@+id/tvGyroY"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/zeros"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/z" />

        <TextView
            android:id="@+id/tvGyroZ"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/zeros"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvMagneto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:text="@string/magneto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLGyro" />

    <LinearLayout
        android:id="@+id/LLMagneto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMagneto">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x" />

        <TextView
            android:id="@+id/tvMagneX"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/zeros"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y" />

        <TextView
            android:id="@+id/tvMagneY"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/zeros"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/z" />

        <TextView
            android:id="@+id/tvMagneZ"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/zeros"
            tools:ignore="TextContrastCheck,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLRest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLMagneto">

        <TextView
            android:id="@+id/tvLicht"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/licht"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLichtRes"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:hint="@string/zero"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/tvDruck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/druck"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDruckRes"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:hint="@string/zero"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvProxi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proxi"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvProxiRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/zero"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rgSamplinsSensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rbNormal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAbtast">

        <RadioButton
            android:id="@+id/rbNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/rbUi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/u_i" />

        <RadioButton
            android:id="@+id/rbGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game" />

        <RadioButton
            android:id="@+id/rbFast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fastest" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/pos"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llSensorBox" />

    <LinearLayout
        android:id="@+id/LLPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/rgPosition"
        app:layout_constraintTop_toBottomOf="@+id/tvPosition">

        <TextView
            android:id="@+id/tvLati"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/lati" />

        <TextView
            android:id="@+id/tvLongi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/longi" />

        <TextView
            android:id="@+id/tvAlti"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/altit" />

        <TextView
            android:id="@+id/tvAccuracy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/accu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/LLPosition"
        app:layout_constraintTop_toBottomOf="@+id/tvPosition">

        <TextView
            android:id="@+id/tvLatiR"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/zeros"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/tvLongiR"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/zeros"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/tvAltiR"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/zeros"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/tvAccuracyR"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/zeros"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:enabled="false"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/llSensorBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <CheckBox
            android:id="@+id/cbBesch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accelerometer" />

        <CheckBox
            android:id="@+id/cbGyro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gyroskop" />

        <CheckBox
            android:id="@+id/cbMagneto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/magnetometer" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvAbtast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/rate"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLRest" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:text="@string/sensor_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLRest" />

    <LinearLayout
        android:id="@+id/llSensorBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/llSensorBox"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <CheckBox
            android:id="@+id/cbLicht"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Licht" />

        <CheckBox
            android:id="@+id/cbDruck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/luftdruck" />

        <CheckBox
            android:id="@+id/cbProxi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proximity" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rgPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPosition">

        <RadioButton
            android:id="@+id/rbNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network" />

        <RadioButton
            android:id="@+id/rbGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gps" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>